--- a/front-end/src/styles/artistitem.scss
+++ b/front-end/src/styles/artistitem.scss
@@ -44,6 +44,8 @@
   }
   .artistitem-card-avatar-img{
     width: 100px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
     margin-top: -45px;
     padding-right: 5px;
   }
