--- a/front-end/src/styles/gallery.scss
+++ b/front-end/src/styles/gallery.scss
@@ -28,7 +28,10 @@
       .profile-gallery-avatar{
         margin-top: -3%;
         width: 8%;
+        aspect-ratio: 1 / 1;
+        object-fit: cover;
       }
+      
       .user-name {
         display: flex;
         justify-content: space-between;
@@ -66,9 +69,6 @@
         box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.2) !important;
       }
     }
-    
-    
-
   }
 }
 
