--- a/front-end/src/styles/navbar.scss
+++ b/front-end/src/styles/navbar.scss
@@ -57,9 +57,14 @@
     margin-left: 15px;
   }
 
-  .nav-icon{
-  font-size:x-large
+  .nav-icon {
+    font-size:x-large
   }
 
+  .header-avatar-img {
+    width: 20px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+  }
 }
 
