--- a/front-end/src/styles/profile.scss
+++ b/front-end/src/styles/profile.scss
@@ -93,6 +93,12 @@
       flex-direction: column;
       justify-content: flex-start;
       margin-left: 0 !important;
+
+      .avatar {
+        width: 75px;
+        aspect-ratio: 1 / 1;
+        object-fit: cover;
+      }
     }
 
   }
